// SysBio-CDM — harmonized schema reflecting the FAIRplex AMP reference implementation.
//
// Mirrors the OMOP CDM v5.4 query node implemented for the AMP reference deployment
// (generated from its schema). OMOP core is standard v5.4. Build-specific points:
//   * person is a DATA-FREE anchor — gender/race/ethnicity_concept_id and
//     year_of_birth are pinned to 0 (CHECK); real demographics live as GOVERNED
//     observation rows so record-level access controls them.
//   * Record-level access is per-table: access_groups + user_access_groups, with a
//     <table>_access join table per governed entity (condition_occurrence,
//     procedure_occurrence, measurement, observation, specimen, files), enforced
//     in-engine via Postgres row-level security. person, visit_occurrence and
//     the reference tables (concept/assay/cdm_source/
//     fact_relationship + assay_* junctions) are ungoverned / always-accessible.
//   * fact_relationship connects INTEGER-keyed records across domains. assay and
//     files use integer surrogate PKs (assay_source_value / drs_id hold the human
//     handle / locator) precisely so fact_relationship can reference them too.
//   * files.drs_id resolves against a GA4GH DRS service (the query->download bridge).
//   * assay models a wet-lab assay OR a computational pipeline; lineage is
//     assay_to_specimen (wet-lab inputs) + assay_input_file (pipeline inputs),
//     with file.assay_id as the output edge.
//   * specimen_relationship is a non-canonical derivation lineage: specimen_id_1
//     derives from specimen_id_2 (relationship_concept_id, e.g. SNOMED 32554
//     "Sub-specimen of"); each edge is backed by procedure_occurrence_id. The
//     most specific anatomic_site_concept_id propagates along the lineage.
//
// Render: paste into https://dbdiagram.io

Table access_groups {
  id SERIAL [pk]
  code TEXT [not null]
  name TEXT [not null]
  description TEXT
  program TEXT
  disease_focus TEXT
  dul TEXT
  data_access_instructions TEXT
  created_at TIMESTAMP(3) [not null]
}

Table user_access_groups {
  user_id TEXT [not null]
  access_group_id INTEGER [not null]
  granted_at TIMESTAMP(3) [not null]
  granted_by TEXT
  indexes {
    (user_id, access_group_id) [pk]
  }
}

Table concept {
  concept_id INTEGER [pk]
  concept_name VARCHAR(255) [not null]
  domain_id VARCHAR(20) [not null]
  vocabulary_id VARCHAR(20) [not null]
  concept_class_id VARCHAR(20) [not null]
  standard_concept VARCHAR(1)
  concept_code VARCHAR(50) [not null]
  valid_start_date DATE [not null]
  valid_end_date DATE [not null]
  invalid_reason VARCHAR(1)
}

Table person {
  person_id INTEGER [pk]
  gender_concept_id INTEGER [not null]
  year_of_birth INTEGER [not null]
  race_concept_id INTEGER [not null]
  ethnicity_concept_id INTEGER [not null]
}

Table visit_occurrence {
  visit_occurrence_id INTEGER [pk]
  person_id INTEGER [not null]
  visit_concept_id INTEGER [not null]
  visit_start_date DATE [not null]
  visit_start_datetime TIMESTAMP(3)
  visit_end_date DATE [not null]
  visit_end_datetime TIMESTAMP(3)
  visit_type_concept_id INTEGER [not null]
  provider_id INTEGER
  care_site_id INTEGER
  visit_source_value VARCHAR(50)
  visit_source_concept_id INTEGER
  admitted_from_concept_id INTEGER
  admitted_from_source_value VARCHAR(50)
  discharged_to_concept_id INTEGER
  discharged_to_source_value VARCHAR(50)
  preceding_visit_occurrence_id INTEGER
}

Table condition_occurrence {
  condition_occurrence_id INTEGER [pk]
  person_id INTEGER [not null]
  condition_concept_id INTEGER [not null]
  condition_start_date DATE [not null]
  condition_start_datetime TIMESTAMP(3)
  condition_end_date DATE
  condition_end_datetime TIMESTAMP(3)
  condition_type_concept_id INTEGER [not null]
  condition_status_concept_id INTEGER
  stop_reason VARCHAR(20)
  provider_id INTEGER
  visit_occurrence_id INTEGER
  visit_detail_id INTEGER
  condition_source_value VARCHAR(50)
  condition_source_concept_id INTEGER
  condition_status_source_value VARCHAR(50)
}

Table measurement {
  measurement_id INTEGER [pk]
  person_id INTEGER [not null]
  measurement_concept_id INTEGER [not null]
  measurement_date DATE [not null]
  measurement_datetime TIMESTAMP(3)
  measurement_time VARCHAR(10)
  measurement_type_concept_id INTEGER [not null]
  operator_concept_id INTEGER
  value_as_number DECIMAL(65,30)
  value_as_concept_id INTEGER
  unit_concept_id INTEGER
  range_low DECIMAL(65,30)
  range_high DECIMAL(65,30)
  provider_id INTEGER
  visit_occurrence_id INTEGER
  visit_detail_id INTEGER
  measurement_source_value VARCHAR(50)
  measurement_source_concept_id INTEGER
  unit_source_value VARCHAR(50)
  unit_source_concept_id INTEGER
  value_source_value VARCHAR(50)
  measurement_event_id INTEGER
  meas_event_field_concept_id INTEGER
}

Table observation {
  observation_id INTEGER [pk]
  person_id INTEGER [not null]
  observation_concept_id INTEGER [not null]
  observation_date DATE [not null]
  observation_datetime TIMESTAMP(3)
  observation_type_concept_id INTEGER [not null]
  value_as_number DECIMAL(65,30)
  value_as_string VARCHAR(60)
  value_as_concept_id INTEGER
  qualifier_concept_id INTEGER
  unit_concept_id INTEGER
  provider_id INTEGER
  visit_occurrence_id INTEGER
  visit_detail_id INTEGER
  observation_source_value VARCHAR(50)
  observation_source_concept_id INTEGER
  unit_source_value VARCHAR(50)
  qualifier_source_value VARCHAR(50)
  value_source_value VARCHAR(50)
  observation_event_id INTEGER
  obs_event_field_concept_id INTEGER
}

Table specimen {
  specimen_id INTEGER [pk]
  person_id INTEGER [not null]
  specimen_concept_id INTEGER [not null]
  specimen_type_concept_id INTEGER [not null]
  specimen_date DATE [not null]
  specimen_datetime TIMESTAMP(3)
  quantity DECIMAL(65,30)
  unit_concept_id INTEGER
  anatomic_site_concept_id INTEGER
  disease_status_concept_id INTEGER
  specimen_source_id VARCHAR(50)
  specimen_source_value VARCHAR(50)
  unit_source_value VARCHAR(50)
  anatomic_site_source_value VARCHAR(50)
  disease_status_source_value VARCHAR(50)
}

Table procedure_occurrence {
  procedure_occurrence_id INTEGER [pk]
  person_id INTEGER [not null]
  procedure_concept_id INTEGER [not null]
  procedure_date DATE [not null]
  procedure_datetime TIMESTAMP(3)
  procedure_end_date DATE
  procedure_end_datetime TIMESTAMP(3)
  procedure_type_concept_id INTEGER [not null]
  modifier_concept_id INTEGER
  quantity INTEGER
  provider_id INTEGER
  visit_occurrence_id INTEGER
  visit_detail_id INTEGER
  procedure_source_value VARCHAR(50)
  procedure_source_concept_id INTEGER
  modifier_source_value VARCHAR(50)
}

Table fact_relationship {
  domain_concept_id_1 INTEGER [not null]
  fact_id_1 INTEGER [not null]
  domain_concept_id_2 INTEGER [not null]
  fact_id_2 INTEGER [not null]
  relationship_concept_id INTEGER [not null]
  indexes {
    (domain_concept_id_1, fact_id_1, domain_concept_id_2, fact_id_2, relationship_concept_id) [pk]
  }
}

Table cdm_source {
  cdm_source_name TEXT [pk]
  cdm_source_abbreviation TEXT [not null]
  cdm_holder TEXT [not null]
  source_description TEXT
  source_documentation_reference TEXT
  cdm_etl_reference TEXT
  source_release_date DATE [not null]
  cdm_release_date DATE [not null]
  cdm_version TEXT
  cdm_version_concept_id INTEGER [not null]
  vocabulary_version TEXT [not null]
}

Table files {
  file_id INTEGER [pk]
  file_name TEXT [not null]
  current_version INTEGER
  assay_id INTEGER
  file_role TEXT
  study TEXT
  "grant" TEXT
  array_type TEXT
  analysis_type TEXT
  biosample_type TEXT
  tissue TEXT
  cell_type TEXT
  species TEXT
  processing_status TEXT
  file_format TEXT
  file_size_bytes BIGINT
  created_on TIMESTAMP(3)
  modified_on TIMESTAMP(3)
  drs_id TEXT [not null]
}

Table assay {
  assay_id INTEGER [pk]
  assay_source_value TEXT
  assay_type TEXT [not null]
  platform TEXT [not null]
  suspension_type TEXT
  analyte_type TEXT
  analysis_pipeline TEXT
}

Table assay_to_specimen {
  assay_id INTEGER [not null]
  specimen_id INTEGER [not null]
  indexes {
    (assay_id, specimen_id) [pk]
  }
}

Table assay_input_file {
  assay_id INTEGER [not null]
  file_id INTEGER [not null]
  indexes {
    (assay_id, file_id) [pk]
  }
}

Table specimen_relationship {
  specimen_id_1 INTEGER [not null]
  specimen_id_2 INTEGER [not null]
  relationship_concept_id INTEGER
  procedure_occurrence_id INTEGER [not null]
  indexes {
    (specimen_id_1, specimen_id_2) [pk]
  }
}

Table condition_occurrence_access {
  condition_occurrence_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (condition_occurrence_id, access_group_id) [pk]
  }
}

Table procedure_occurrence_access {
  procedure_occurrence_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (procedure_occurrence_id, access_group_id) [pk]
  }
}

Table measurement_access {
  measurement_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (measurement_id, access_group_id) [pk]
  }
}

Table observation_access {
  observation_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (observation_id, access_group_id) [pk]
  }
}

Table specimen_access {
  specimen_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (specimen_id, access_group_id) [pk]
  }
}

Table file_access {
  file_id INTEGER [not null]
  access_group_id INTEGER [not null]
  indexes {
    (file_id, access_group_id) [pk]
  }
}

// ---- Relationships (real FKs only) ----
Ref: user_access_groups.access_group_id > access_groups.id
Ref: visit_occurrence.person_id > person.person_id
Ref: condition_occurrence.person_id > person.person_id
Ref: measurement.person_id > person.person_id
Ref: observation.person_id > person.person_id
Ref: specimen.person_id > person.person_id
Ref: procedure_occurrence.person_id > person.person_id
Ref: files.assay_id > assay.assay_id
Ref: assay_to_specimen.assay_id > assay.assay_id
Ref: assay_to_specimen.specimen_id > specimen.specimen_id
Ref: assay_input_file.assay_id > assay.assay_id
Ref: assay_input_file.file_id > files.file_id
Ref: specimen_relationship.specimen_id_1 > specimen.specimen_id
Ref: specimen_relationship.specimen_id_2 > specimen.specimen_id
Ref: specimen_relationship.procedure_occurrence_id > procedure_occurrence.procedure_occurrence_id
Ref: condition_occurrence_access.condition_occurrence_id > condition_occurrence.condition_occurrence_id
Ref: condition_occurrence_access.access_group_id > access_groups.id
Ref: procedure_occurrence_access.procedure_occurrence_id > procedure_occurrence.procedure_occurrence_id
Ref: procedure_occurrence_access.access_group_id > access_groups.id
Ref: measurement_access.measurement_id > measurement.measurement_id
Ref: measurement_access.access_group_id > access_groups.id
Ref: observation_access.observation_id > observation.observation_id
Ref: observation_access.access_group_id > access_groups.id
Ref: specimen_access.specimen_id > specimen.specimen_id
Ref: specimen_access.access_group_id > access_groups.id
Ref: file_access.file_id > files.file_id
Ref: file_access.access_group_id > access_groups.id
